--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                             </div>
                             <div class="text">
                                 <i class="fa fa-phone-alt"></i>
-                                <h2>+123 456 7890</h2>
-                                <p>For Appointment</p>
+                                <h2>+34 637 47 99 27</h2>
+                                <p>Para cita</p>
                             </div>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                                 <a href=""><i class="fab fa-twitter"></i></a>
                                 <a href=""><i class="fab fa-facebook-f"></i></a>
                                 <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-instagram"></i>https://www.instagram.com/segure_fiscal/?utm_source=qr</a>
                             </div>
                         </div>
                     </div>
@@ -60,7 +60,7 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand">Confer</a>
+                <a href="index.html" class="navbar-brand">Secure Fiscal</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
