--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <a href=""><i class="fab fa-twitter"></i></a>
                                 <a href=""><i class="fab fa-facebook-f"></i></a>
                                 <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                <a href=""><i class="fab fa-instagram"></i>https://www.instagram.com/segure_fiscal/?utm_source=qr</a>
+                                <a href="https://www.instagram.com/segure_fiscal/?utm_source=qr"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
