--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                             </div>
                             <div class="text">
                                 <i class="fa fa-phone-alt"></i>
-                                <h2>+34 637 47 99 27</h2>
-                                <p>Para cita</p>
+                                <h2><a href="tel:+34 637 47 99 27">+34 637 47 99 27</a></h2>
+                                <p>Llámanos</p>
                             </div>
                         </div>
                     </div>
